--- a/ScienceWork/MatModel.tex
+++ b/ScienceWork/MatModel.tex
@@ -724,16 +724,16 @@ S^3_{k,r} = & \{(\Gamma^{(k,r)},x_3) \colon x_3\in Z_+, x_3 > L - \sum_{t=0}^{r-
 
 \subsection[Рекуррентные соотношения для производящих функций]%
 {Рекуррентные соотношения для производящих функций}
-Обозначим 
+Пусть $\Gamma^{(k,r)}\in \Gamma$ и $x_3 \in Z_+$. Обозначим 
 \begin{equation*}
 H_{-1}(\Gamma^{(k,r)}, x_3) = \{\gamma \in \Gamma \colon h(\gamma, x_3) = \Gamma^{(k,r)}\}.
 \end{equation*}
-Тогда непосредственно из \eqref{hLaw} находим явный вид этого множества для различных $\Gamma^{(k,r)} \in \Gamma$ и $x_3 \in Z_+$:
+Тогда непосредственно из \eqref{hLaw} находим явный вид этого множества для различных $\Gamma^{(k,r)}$ и $x_3$:
 \begin{equation}
 H_{-1}(\Gamma^{(k,r)}, x_3) = 
 \begin{cases}
 \{\Gamma^{(k_1,r_1)}, \Gamma^{(0,r\ominus_0 1)}\},& \quad \text{ если } (k=0\text{ \& } x_3 \leqslant L);\\
-\{\Gamma^{(k,r\ominus_k 1)}, \Gamma^{(0,r_2)}\},& \quad \text{ если } (\Gamma^{(k,r)}\in C_k^{\mathrm{I}} \text{ \& } x_3>L)\\ 
+\{\Gamma^{(k,r\ominus_k 1)}, \Gamma^{(0,r_2)}\},& \quad \text{ если } (\Gamma^{(k,r)}\in C_k^{\mathrm{I}} \text{ \& } x_3>L);\\ 
 \{\Gamma^{(k,r\ominus_k 1)}\},& \quad \text{ если } (\Gamma^{(k,r)}\in C_k^{\mathrm{O}}) \text{ или } (\Gamma^{(k,r)}\in C_k^{\mathrm{N}});\\
 \emptyset,& \quad \text{ если }
 \begin{aligned} 
@@ -741,7 +741,128 @@ H_{-1}(\Gamma^{(k,r)}, x_3) =
 \end{aligned},
 \end{cases}
 \end{equation}
-где $h_1(\Gamma^{(k_1,r_1)}=r)$ и $h_3(r_2)=\Gamma^{k,r}$.
+где $h_1(\Gamma^{(k_1,r_1)})=r$ и $h_3(r_2)=\Gamma^{(k,r)}$.
+
+Обозначим для $\gamma \in \Gamma$ и $x_3 \in Z_+$
+\begin{equation}
+Q_{3,i}(\gamma,x) = \Pr(\Gamma_{i}=\gamma, \varkappa_{3,i}=x_3).
+\end{equation}
+
+\begin{theorem}
+Пусть $\tilde{\gamma} =\Gamma^{(\tilde{k},\tilde{r})}\in \Gamma$ и $\tilde{x}_3 \in Z_+$. Тогда для переходных вероятностей $\{Q_{3,i}(\cdot,\cdot)\}_{i\geqslant 0}$ марковской цепи $\MarkThree$ имеют место следующие рекуррентные соотношения:
+\begin{multline}
+Q_{3,i+1}(\tilde{\gamma},\tilde{x}_3) = (1-\delta_{\tilde{x}_3,0}) \sum_{x_3=0}^{\tilde{x}_3 +  \ell(\tilde{k},\tilde{r},3)}\sum_{\gamma \in H_{-1}(\tilde{\gamma},x_3)} Q_{3,i}(\gamma,x_3) \times 
+\varphi_3(\tilde{x}_3 + \ell(\tilde{k},\tilde{r},3) - x_3,T^{(\tilde{k},\tilde{r})}) + \\
++ \delta_{\tilde{x}_3,0} \sum_{x_3=0}^{\ell(\tilde{k},\tilde{r},3)}\sum_{\gamma \in H_{-1}(\tilde{\gamma},x_3)} Q_{3,i}(\gamma,x_3) \sum_{a=0}^{\ell(\tilde{k},\tilde{r},3) - x_3} \varphi_3(a,T^{(\tilde{k},\tilde{r})})
+\label{prob:rek}
+\end{multline}
+\end{theorem}
+\begin{proof}
+По формуле полной вероятности имеем
+\begin{multline*}
+Q_{3,i+1}(\tilde{\gamma},\tilde{x}_3) = \Pr(\Gamma_{i+1}=\tilde{\gamma}, \varkappa_{3,i+1}=\tilde{x}_3) = \\
+= \sum_{x_3=0}^{\infty}\sum_{\gamma \in \Gamma} \Pr(\Gamma_{i}=\gamma, \varkappa_{3,i}=x_3) \times \Pr(\Gamma_{i+1}=\tilde{\gamma}, \varkappa_{3,i+1}=\tilde{x}_3 | \Gamma_{i}=\gamma, \varkappa_{3,i}=x_3) =  \\ 
+= \sum_{x_3=0}^{\infty}\sum_{\gamma \in \Gamma} Q_{3,i}(\gamma,x_3) \times \delta_{\tilde{\gamma},h(\gamma,x_3)}\times
+\Pr(\varkappa_{3,i+1}=\tilde{x}_3 | \Gamma_{i}=\gamma, \varkappa_{3,i}=x_3)=\\
+=\sum_{x_3=0}^{\infty}\sum_{\gamma \in H_{-1}(\tilde{\gamma},x_3)} Q_{3,i}(\gamma,x_3) \times \delta_{\tilde{\gamma},h(\gamma,x_3)}\times
+\Pr(\varkappa_{3,i+1}=\tilde{x}_3 | \Gamma_{i}=\gamma, \varkappa_{3,i}=x_3)
+\end{multline*}
+и учитывая \eqref{kappa:3:conditional} продолжаем цепочку выкладок
+\begin{multline*}
+Q_{3,i+1}(\tilde{\gamma},\tilde{x}_3)= \sum_{x_3=0}^{\infty}\sum_{\gamma \in H_{-1}(\tilde{\gamma},x_3)} Q_{3,i}(\gamma,x_3) \times 
+\tilde{\varphi}_3(\tilde{k},\tilde{r}, T^{(\tilde{k},\tilde{r})},x_3,\tilde{x}_3) = \\
+= \sum_{x_3=0}^{\infty}\sum_{\gamma \in H_{-1}(\tilde{\gamma},x_3)} Q_{3,i}(\gamma,x_3) \times 
+[ (1-\delta_{\tilde{x}_3,0})\varphi_3(\tilde{x}_3 + \ell(\tilde{k},\tilde{r},3) - x_3,T^{(\tilde{k},\tilde{r})}) + \\ 
++\delta_{\tilde{x}_3,0} \sum_{a=0}^{\ell(\tilde{k},\tilde{r},3)-x_3}\varphi_3(a,T^{(\tilde{k},\tilde{r})})]
+\end{multline*}
+Поскольку  $\varphi_3(x,t)=0$, для $x<0$, в результате получаем
+\begin{multline*}
+Q_{3,i+1}(\tilde{\gamma},\tilde{x}_3)= (1-\delta_{\tilde{x}_3,0}) \sum_{x_3=0}^{\tilde{x}_3 +  \ell(\tilde{k},\tilde{r},3)}\sum_{\gamma \in H_{-1}(\tilde{\gamma},x_3)} Q_{3,i}(\gamma,x_3) \times 
+\varphi_3(\tilde{x}_3 + \ell(\tilde{k},\tilde{r},3) - x_3,T^{(\tilde{k},\tilde{r})}) + \\
++ \delta_{\tilde{x}_3,0} \sum_{x_3=0}^{\ell(\tilde{k},\tilde{r},3)}\sum_{\gamma \in H_{-1}(\tilde{\gamma},x_3)} Q_{3,i}(\gamma,x_3) \sum_{a=0}^{\ell(\tilde{k},\tilde{r},3) - x_3} \varphi_3(a,T^{(\tilde{k},\tilde{r})}).
+\end{multline*}
+\end{proof}
+
+Пусть $k$ и $r$ таковы, что $\Gamma^{(k,r)}\in \Gamma$. Введем производящие функции
+\begin{align*}
+\mathfrak{M}^{(i)}(k,r,v) &= \sum_{w=0}^{\infty} Q_i(\Gamma^{(k,r)},w) v^w,\\
+\Phi^{(i)}(k,r,v) &= q_{k,r}(v) \sum_{x_3=0}^{\infty} \sum_{\gamma \in H_{-1}(\Gamma^{(k,r)},x_3)} Q_{3,i}(\gamma,x_3) v^{x_3},
+\end{align*}
+где 
+\begin{equation*}
+q_{k,r}(v) = v^{-\ell(k,r,3)}\sum_{w=0}^{\infty} \varphi_3(w,T^{(k,r)})v^w.
+\end{equation*}
+
+\begin{theorem}
+Пусть $\tilde{\gamma}=\Gamma^{(\tilde{k},\tilde{r})} \in \Gamma$. Тогда имеют место следующие рекуррентные по $i \geqslant 0$ соотношения для производящих функций марковской цепи $\MarkThree$:
+\begin{multline}
+\mathfrak{M}^{(i+1)}(\tilde{k},\tilde{r},v) = \Phi^{(i)}(\tilde{k},\tilde{r},v)+\sum_{x_3=0}^{\ell(\tilde{k},\tilde{r},3)}\sum_{\gamma \in H_{-1}(\tilde{\gamma},x_3)} Q_{3,i}(\gamma,x_3) \sum_{a=0}^{\ell(\tilde{k},\tilde{r},3) - x_3} \varphi_3(a,T^{(\tilde{k},\tilde{r})}) - \\
+- \sum_{x_3=0}^{\ell(\tilde{k},\tilde{r},3)}  \sum_{\gamma \in H_{-1}(\tilde{\gamma},x_3)} Q_{3,i}(\gamma,x_3) v^{x_3-\ell(\tilde{k},\tilde{r},3)}  \sum_{w=0}^{\ell(\tilde{k},\tilde{r},3) + 1 -x_3}\varphi_3(w,T^{(\tilde{k},\tilde{r})}) v^w.
+\label{markk_proiz}
+\end{multline}
+\end{theorem}
+\begin{proof}
+Учитывая \eqref{prob:rek}, распишем
+\begin{multline}
+\mathfrak{M}^{(i+1)}(\tilde{k},\tilde{r},v) = \sum_{x_3=0}^{\ell(\tilde{k},\tilde{r},3)}\sum_{\gamma \in H_{-1}(\tilde{\gamma},x_3)} Q_{3,i}(\gamma,x_3) \sum_{a=0}^{\ell(\tilde{k},\tilde{r},3) - x_3} \varphi_3(a,T^{(\tilde{k},\tilde{r})}) + \\
++ \sum_{w=1}^{\infty} \sum_{x_3=0}^{w +  \ell(\tilde{k},\tilde{r},3)}\sum_{\gamma \in H_{-1}(\tilde{\gamma},x_3)} Q_{3,i}(\gamma,x_3) \times 
+\varphi_3(w + \ell(\tilde{k},\tilde{r},3) - x_3,T^{(\tilde{k},\tilde{r})}) v^w.
+\label{sum:zero}
+\end{multline}
+После изменения порядка суммирования по $x_3$ и $w$ второе слагаемое распадается еще на два слагаемых
+\begin{equation*}
+\sum_{w=1}^{\infty} \sum_{x_3=0}^{w+\ell(\tilde{k},\tilde{r},3)} (\dots) = \sum_{x_3=0}^{\ell(\tilde{k},\tilde{r},3)}\sum_{w=1}^{\infty}(\dots) + \sum_{x_3=\ell(\tilde{k},\tilde{r},3) + 1}^{\infty}\sum_{w=x_3-\ell(\tilde{k},\tilde{r},3)}^{\infty}(\dots).
+\end{equation*}
+
+Преобразуем их.
+\begin{multline}
+ \sum_{x_3=0}^{\ell(\tilde{k},\tilde{r},3)}\sum_{w=1}^{\infty}  \sum_{\gamma \in H_{-1}(\tilde{\gamma},x_3)} Q_{3,i}(\gamma,x_3) \times 
+\varphi_3(w + \ell(\tilde{k},\tilde{r},3) - x_3,T^{(\tilde{k},\tilde{r})}) v^w = \\
+=  \sum_{x_3=0}^{\ell(\tilde{k},\tilde{r},3)}  \sum_{\gamma \in H_{-1}(\tilde{\gamma},x_3)} Q_{3,i}(\gamma,x_3)  \sum_{w=1}^{\infty} 
+\varphi_3(w + \ell(\tilde{k},\tilde{r},3) - x_3,T^{(\tilde{k},\tilde{r})}) v^w = \\
+=\sum_{x_3=0}^{\ell(\tilde{k},\tilde{r},3)}  \sum_{\gamma \in H_{-1}(\tilde{\gamma},x_3)} Q_{3,i}(\gamma,x_3) v^{x_3-\ell(\tilde{k},\tilde{r},3)}  \sum_{w=\ell(\tilde{k},\tilde{r},3) + 1 -x_3}^{\infty}
+\varphi_3(w,T^{(\tilde{k},\tilde{r})}) v^w.
+\label{sum:one}
+\end{multline}
+Аналогично для второго слагаемого
+\begin{multline}
+ \sum_{x_3=\ell(\tilde{k},\tilde{r},3) + 1}^{\infty}\sum_{w=x_3-\ell(\tilde{k},\tilde{r},3)}^{\infty} \sum_{\gamma \in H_{-1}(\tilde{\gamma},x_3)} Q_{3,i}(\gamma,x_3) \times 
+\varphi_3(w + \ell(\tilde{k},\tilde{r},3) - x_3,T^{(\tilde{k},\tilde{r})}) v^w = \\
+=  \sum_{x_3=\ell(\tilde{k},\tilde{r},3) + 1}^{\infty} \sum_{\gamma \in H_{-1}(\tilde{\gamma},x_3)} Q_{3,i}(\gamma,x_3) v^{x_3-\ell(\tilde{k},\tilde{r},3)}\sum_{w=0}^{\infty}  
+\varphi_3(w,T^{(\tilde{k},\tilde{r})}) v^w = \\
+= \sum_{x_3=0}^{\infty} \sum_{\gamma \in H_{-1}(\tilde{\gamma},x_3)} Q_{3,i}(\gamma,x_3) v^{x_3-\ell(\tilde{k},\tilde{r},3)}\sum_{w=0}^{\infty} 
+\varphi_3(w,T^{(\tilde{k},\tilde{r})}) v^w - \\
+- \sum_{x_3=0}^{\ell(\tilde{k},\tilde{r},3)} \sum_{\gamma \in H_{-1}(\tilde{\gamma},x_3)} Q_{3,i}(\gamma,x_3) v^{x_3-\ell(\tilde{k},\tilde{r},3)}\sum_{w=0}^{\infty}
+\varphi_3(w,T^{(\tilde{k},\tilde{r})}) v^w
+\label{sum:two}
+\end{multline}
+
+Подставляя \eqref{sum:one} и \eqref{sum:two} в \eqref{sum:zero}, получим:
+\begin{multline*}
+\mathfrak{M}^{(i+1)}(\tilde{k},\tilde{r},v) = \sum_{x_3=0}^{\ell(\tilde{k},\tilde{r},3)}\sum_{\gamma \in H_{-1}(\tilde{\gamma},x_3)} Q_{3,i}(\gamma,x_3) \sum_{a=0}^{\ell(\tilde{k},\tilde{r},3) - x_3} \varphi_3(a,T^{(\tilde{k},\tilde{r})}) + \\
++ \sum_{x_3=0}^{\ell(\tilde{k},\tilde{r},3)}  \sum_{\gamma \in H_{-1}(\tilde{\gamma},x_3)} Q_{3,i}(\gamma,x_3) v^{x_3-\ell(\tilde{k},\tilde{r},3)}  \sum_{w=\ell(\tilde{k},\tilde{r},3) + 1 -x_3}^{\infty}
+\varphi_3(w,T^{(\tilde{k},\tilde{r})}) v^w + \\
++ \sum_{x_3=0}^{\infty} \sum_{\gamma \in H_{-1}(\tilde{\gamma},x_3)} Q_{3,i}(\gamma,x_3) v^{x_3-\ell(\tilde{k},\tilde{r},3)}\sum_{w=0}^{\infty} 
+\varphi_3(w,T^{(\tilde{k},\tilde{r})}) v^w - \\
+- \sum_{x_3=0}^{\ell(\tilde{k},\tilde{r},3)} \sum_{\gamma \in H_{-1}(\tilde{\gamma},x_3)} Q_{3,i}(\gamma,x_3) v^{x_3-\ell(\tilde{k},\tilde{r},3)}\sum_{w=0}^{\infty}  
+\varphi_3(w,T^{(\tilde{k},\tilde{r})}) v^w.
+\end{multline*}
+Сгруппируем второе и четвертое слагаемые:
+\begin{multline*}
+\mathfrak{M}^{(i+1)}(\tilde{k},\tilde{r},v)= \sum_{x_3=0}^{\ell(\tilde{k},\tilde{r},3)}\sum_{\gamma \in H_{-1}(\tilde{\gamma},x_3)} Q_{3,i}(\gamma,x_3) \sum_{a=0}^{\ell(\tilde{k},\tilde{r},3) - x_3} \varphi_3(a,T^{(\tilde{k},\tilde{r})}) + \\
++ \sum_{x_3=0}^{\ell(\tilde{k},\tilde{r},3)}  \sum_{\gamma \in H_{-1}(\tilde{\gamma},x_3)} Q_{3,i}(\gamma,x_3) v^{x_3-\ell(\tilde{k},\tilde{r},3)}  [ \sum_{w=\ell(\tilde{k},\tilde{r},3) + 1 -x_3}^{\infty}
+\varphi_3(w,T^{(\tilde{k},\tilde{r})}) v^w -\sum_{w=0}^{\infty} 
+\varphi_3(w,T^{(\tilde{k},\tilde{r})}) v^w ] +\\
++ q_{\tilde{k},\tilde{r}}(v) \sum_{x_3=0}^{\infty} \sum_{\gamma \in H_{-1}(\tilde{\gamma},x_3)} Q_{3,i}(\gamma,x_3) v^{x_3}.
+\end{multline*}
+В результате получаем утверждение теоремы:
+\begin{multline*}
+\mathfrak{M}^{(i+1)}(\tilde{k},\tilde{r},v)=\Phi^{(i)}(\tilde{k},\tilde{r},v)+\sum_{x_3=0}^{\ell(\tilde{k},\tilde{r},3)}\sum_{\gamma \in H_{-1}(\tilde{\gamma},x_3)} Q_{3,i}(\gamma,x_3) \sum_{a=0}^{\ell(\tilde{k},\tilde{r},3) - x_3} \varphi_3(a,T^{(\tilde{k},\tilde{r})}) - \\
+- \sum_{x_3=0}^{\ell(\tilde{k},\tilde{r},3)}  \sum_{\gamma \in H_{-1}(\tilde{\gamma},x_3)} Q_{3,i}(\gamma,x_3) v^{x_3-\ell(\tilde{k},\tilde{r},3)}  \sum_{w=0}^{\ell(\tilde{k},\tilde{r},3) -x_3}\varphi_3(w,T^{(\tilde{k},\tilde{r})}) v^w.
+\end{multline*}
+
+\end{proof}
+
 \begin{thebibliography}{99}
 % Не удаляйте следующую строчку!
 \addcontentsline{toc}{section}{Литература}
