Updates from ShareLaTeX

--- a/MastersDiploma/presentation(short).tex
+++ b/MastersDiploma/presentation(short).tex
@@ -4,6 +4,9 @@
 \usepackage{../MyPackages/commands}
 \usepackage[absolute,overlay]{textpos}
 \usepackage{setspace}
+\usepackage{indentfirst}
+%\usepackage[margin=2cm]{geometry}
+\usepackage[utf8]{inputenc}
 
 \defbeamertemplate{footline}{centered page number}
 {%
