Add dm9 presentation

--- a/Conferences/dm9_05_2015/KocheganovZorine.tex
+++ b/Conferences/dm9_05_2015/KocheganovZorine.tex
@@ -30,14 +30,13 @@
 %\setbeamertemplate{frametitle continuation}[from second]
 
 \author[В.М. Кочеганов, А.В. Зорин]{\textbf{В.М. Кочеганов}, А.В. Зорин}
-\title[Вероятностная модель тандема...]%
-{ВЕРОЯТНОСТНАЯ МОДЕЛЬ ТАНДЕМА СИСТЕМ МАССОВОГО ОБСЛУЖИВАНИЯ С~ЦИКЛИЧЕСКИМ УПРАВЛЕНИЕМ С~ПРОДЛЕНИЕМ}
+\title[Дискретная модель колебания ...]%
+{ДИСКРЕТНАЯ МОДЕЛЬ КОЛЕБАНИЯ ДЛИНЫ НИЗКОПРИОРИТЕТНОЙ ОЧЕРЕДИ В~ТАНДЕМЕ СИСТЕМ ОБСЛУЖИВАНИЯ ПРИ~ЦИКЛИЧЕСКОМ АЛГОРИТМЕ С~ПРОДЛЕНИЕМ}
 \institute[ННГУ]{\normalsize Нижегородский
   государственный университет \\  им. Н.И. Лобачевского}
-\date[23-26.02.2015]{
-Теория вероятностей, случайные процессы, \\
-математическая статистика и приложения\\
-(г. Минск, Республика Беларусь)}
+\date[20-22.05.2015]{
+Дискретные модели в теории управляющих систем\\
+(Москва и Подмосковье)}
 
 
 \newcommand{\backupbegin}{
@@ -75,15 +74,21 @@
 \end{frame}
 
 \begin{frame}{Параметры системы}
+\begin{block}{Входные потоки}
 Входные потоки $\Pi_1$ и $\Pi_3$ --- \textbf{неординарные пуассоновские} потоки с интенсивностями $\lambda_1$ и $\lambda_3$ соответственно. 
 
 Распределение числа заявок в группе по потоку $\Pi_j$, $j\in \{1,3\}$, имеет \textbf{производящую функцию}:
 $$
-f_j(z) = \sum_{\nu=1}^{\infty} p_{\nu}^{(j)} z ^{\nu}.
+f_j(z) = \sum_{\nu=1}^{\infty} p_{\nu}^{(j)} z ^{\nu}, \quad |z|<(1+\varepsilon), \varepsilon>0.
 $$
 
-Пусть обслуживающее устройство находится в состоянии $\Gamma^{(k,r)}$. Тогда время нахождения в этом состоянии неслучайно и равно $T^{(k,r)}$. Количество требований, пришедших за это время по потоку насыщения $\Pi^{\mbox{\scriptsize{нас}}}_j$,  равно $\ell(k,r,j)$. 
+Требования входных потоков $\Pi_4$ и $\Pi_2$ формируются из выходных требований потоков $\Pi^{\mbox{\scriptsize{вых}}}_1$ и $\Pi^{\mbox{\scriptsize{вых}}}_4$ соответственно.
+\end{block}
 
+
+\begin{block}{Дисциплины очередей}
+Устройство $\delta_j$, $j \in \{1, 2, 3, 4\}$, поддерживает FIFO дисциплину очереди $O_j$.
+\end{block}
 
 \end{frame}
 
@@ -98,30 +103,32 @@ $$
 \end{itemize}
 \end{block}
 
-\framebreak
-Основные принципы кибернетического подхода:
-  \begin{enumerate}
-  \item \textbf{принцип дискретности} актов функционирования управляемой
-    системы обслуживания во времени;
-  \item \textbf{принцип совместного
-    рассмотрения} поблочного строения управляющей системы
-    обслуживания и ее функционирования во времени.
-  \item \textbf{принцип нелокальности} при описании поблочного 
-    строения управляемой системы обслуживания;
-  \end{enumerate}
-
   \framebreak
 
-Выбор моментов наблюдения
+Требуется задание:
+\begin{itemize}
+\item дискретных моментов наблюдения за системой с помощью точечного случайного процесса $\{\tau_i, i\geqslant0\}$;
+\item случайных величин и случайных элементов, описывающих СМО и соответствующим моментам наблюдения $\tau_i$.
+\end{itemize}
+
    \begin{figure}[h]
     \centering
     \pgfimage[height=2cm]{timings}
     \caption{Шкала моментов наблюдения}
     \label{AZ:fig:3}
   \end{figure}
-
 \framebreak
-
+Основные принципы кибернетического подхода:
+  \begin{enumerate}
+  \item \textbf{принцип дискретности} актов функционирования управляемой
+    системы обслуживания во времени;
+  \item \textbf{принцип нелокальности} при описании поэлементного
+    строения управляемой системы обслуживания;
+  \item \textbf{принцип совместного
+    рассмотрения} поэлементного строения управляющей системы
+    обслуживания и ее функционирования во времени.
+  \end{enumerate}
+  \framebreak
 Основными составляющими кибернетической системы являются:
   \begin{itemize}
   \item \textbf{схема}
@@ -129,7 +136,7 @@ $$
       \item внешняя среда
       \item входные и выходные полюса
       \item внешняя и внутренняя память
-      \item устройства по переработке информации во внутренней и внешней памяти
+      \item устройства по переработке информации во входной и выходной памяти
       \end{itemize}
   \item \textbf{информация} --- набор состояний среды, очередей в накопителях, обслуживающего устройства, потоков насыщения и потоков обслуженных требований
   \item \textbf{координата} блока --- номер блока на схеме
@@ -146,12 +153,13 @@ $$
   \item $Z_+^4$~--- множество состояний \textbf{выходных полюсов}
   \item $\Gamma=\{\Gamma^{(k,r)} \colon k=0,1,\ldots,d; r=1,2,\ldots n_k\}$~--- множество состояний \textbf{внутренней памяти}
   \item $Z_+^4$~--- множество состояний \textbf{внешней памяти}
+  \item $Z_+^4$~--- множество состояний \textbf{выходных полюсов}
   \item $\{r^{(1)}\}$~--- множество состояний \textbf{устройства по переработке информации во внешней памяти} (одно состояние)
-  \item граф переходов (будет описан ниже) описывает \textbf{устройство по переработке информации во внутренней памяти}
+  \item граф смены переходов (будет описан ниже) описывает \textbf{устройство по переработке информации во внутренней памяти}
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Необходимые случайные величины}
+\begin{frame}{Необходимы случайные величины}
   \begin{itemize}
     \item $\tau_i \in {\mathbb R}_+$, $i=0$, $1$, \ldots --- момент смены состояния
     обслуживающего утройства;
@@ -160,7 +168,7 @@ $$
     \item $\xi_{j,i} \in Z_+$ --- число требований потока насыщения $\Pi^{\mbox{\scriptsize{нас}}}_j$ на промежутке $(\tau_i, \tau_{i+1}]$;
     \item $\varkappa_{j,i} \in Z_+$ --- число требований в
     очереди $O_j$ в момент $\tau_i$;
-  \item $\Gamma_i\in\Gamma$ --- состояние обслуживающего устройства в момент $\tau_i$;
+  \item $\Gamma_i\in\Gamma=\{\Gamma^{(k,r)} \colon k=0,1,\ldots,d; r=1,2,\ldots n_k\}$ --- состояние обслуживающего устройства в момент $\tau_i$;
   \item $\overline{\xi}_{j,i} \in Z_+$ --- число требований
     выходного потока $\Pi^{\mbox{\scriptsize{вых}}}_j$ на промежутке
     $(\tau_i, \tau_{i+1}]$,
@@ -169,22 +177,14 @@ $$
 \end{frame}
 
 
-\begin{frame}[allowframebreaks]{Граф переходов}
+\begin{frame}[allowframebreaks]{Закон изменения состояний обслуживающего устройства}
  Изменение состояний обслуживающего устройства: $\Gamma_{i+1}=h(\Gamma_i,\varkappa_{3,i})$.
    \begin{figure}[h]
     \centering
-    \pgfimage[height=4.5cm]{SystemStates}
-    \caption{Числовой пример. Времена}
+    \pgfimage[height=4.5cm]{GraphScheme3}
+    \caption{Класс графов переходов (отображение $h(\cdot,\cdot)$).}
     \label{VK:fig:3}
   \end{figure}
-   \begin{figure}[h]
-    \centering
-    \pgfimage[height=6cm]{GraphScheme3}
-    \caption{Числовой пример. Граф переходов (отображение $h(\cdot,\cdot)$).}
-    \label{VK:fig:3}
-  \end{figure}
-
-
   \framebreak
   Таким образом, $$\Gamma = \bigl( \bigcup_{k=1}^d C_k \bigr) \bigcup \{\Gamma^{(0,1)}, \Gamma^{(0,2)}, \ldots, \Gamma^{(0,n_0)}\}, \quad C_k = C_k^{\mathrm{I}} \cup C_k^{\mathrm{O}}  \cup C_k^{\mathrm{N}}.$$
   \begin{equation*}
@@ -209,8 +209,7 @@ $$h_1(\cdot)\colon \bigcup_{k=1}^d C_k^{\mathrm{O}}\to N_0, \quad h_2(\cdot)\col
 \varkappa_{j,i+1}&=\varkappa_{j,i}+\eta_{j,i}-\overline{\xi}_{j,i}, \quad & j\in \{1,2,3\},\\
 \varkappa_{j,i+1}&=\max\{{0,\varkappa_{j,i}+\eta_{j,i}-\xi_{j,i}}\}, \quad & j\in \{1,2,3\},\\
 \varkappa_{4,i+1}&=\varkappa_{4,i}+\eta_{4,i}-\eta_{2,i}, \quad &\\
-\xi_{4,i} & = \varkappa_{4,i}, & \\
-\eta_{4,i} & = \min\{ \varkappa_{1,i} + \eta_{1,i}, \xi_{1,i}\}.
+\xi_{4,i} & = \varkappa_{4,i}. &
 \end{aligned}
 \label{rekk}
 \end{equation}
@@ -225,11 +224,11 @@ $$h_1(\cdot)\colon \bigcup_{k=1}^d C_k^{\mathrm{O}}\to N_0, \quad h_2(\cdot)\col
 Пусть $a=(a_1, a_2, a_3, a_4) \in \mathbb{Z}_+^4$ и $x=(x_1, x_2, x_3, x_4) \in \mathbb{Z}_+^4$.
 %\begin{block}{Предположение 1}
 
-Тогда вероятность $\varphi(a,k,r,x)$ одновременного выполнения равенств $\eta_{1,i}=a_1$, $\eta_{2,i}=a_2$, $\eta_{3,i}=a_3$, $\eta_{4,i}=a_4$ при условии  $\nu_i=(\Gamma{(k,r)}; x)$ есть 
-\begin{equation}
+Тогда вероятность $\varphi(a,k,r,x)$ одновременного выполнения равенств $\eta_{1,i}=a_1$, $\eta_{2,i}=a_2$, $\eta_{3,i}=a_3$, $\eta_{4,i}=a_4$ есть 
+\begin{equation*}
 \!\!\varphi_1(a_1,h_T(\Gamma^{({k},{r})},x_3)) \times \psi(a_2,x_4, p_{\tilde{k},\tilde{r}}) \times \varphi_3(a_3,h_T(\Gamma^{({k},{r})},x_3))
 \times \delta_{a_4,\min{\{\ell(\tilde{k},\tilde{r},1), x_1+a_1}\}},
-\end{equation}
+\end{equation*}
 %\end{block}
 где
 \begin{equation*}
@@ -245,50 +244,53 @@ $$
 Пусть $b=(b_1, b_2, b_3, b_4) \in \mathbb{Z}_+^4$. 
 
 Тогда вероятность $\zeta(b, k, r, x)$ одновременного выполнения равенств $\xi_{1,i}=b_1$, $\xi_{2,i}=b_2$, $\xi_{3,i}=b_3$, $\xi_{4,i}=b_4$ при фиксированном значении метки $\nu_i=(\Gamma{(k,r)}; x)$ есть
-\begin{equation}
+\begin{equation*}
 \delta_{b_1,\ell(\tilde{k},\tilde{r},1)} \times \delta_{b_2,\ell(\tilde{k},\tilde{r},2)} \times 
 \delta_{b_3,\ell(\tilde{k},\tilde{r},3)} \times \delta_{b_4,x_4}.
-\end{equation}
-где $\tilde{k}$ и $\tilde{r}$ такие, что $\Gamma^{(\tilde{k},\tilde{r})}=h(\Gamma^{(k,r)},x_3)$.
+\end{equation*}
+где
+\begin{equation*}
+\Gamma^{(\tilde{k},\tilde{r})}=h(\Gamma^{(k,r)},x_3).
+\end{equation*}
 \end{frame}
 
 
 \begin{frame}[allowframebreaks]{Полученные результаты}
 
-    {\bf Теорема 1.} {\it 
-    Пусть 
-    $$\gamma_0=\Gamma^{(k_0,r_0)} \in \Gamma, \quad x^0=(x_{1,0},x_{2,0}, x_{3,0},x_{4,0})\in \mathbb{Z}_+^4$$ фиксированы. Тогда существует вероятностное пространство $(\Omega, {\cal F}, {\mathbf P}(\cdot))$ и заданные на нем случайные величины $\eta_{j,i}=\eta_{j,i}(\omega)$, $\xi_{j,i}=\xi_{j,i}(\omega)$, $\overline{\xi}_{j,i}=\xi_{j,i}(\omega)$, $\varkappa_{j,i}=\varkappa_{j,i}(\omega)$ и случайные элементы $\Gamma_i=\Gamma_i(\omega)$, $i\geqslant 0$, $j\in \{1, 2, 3, 4\}$, такие, что 
-    \begin{itemize}
-    \item имеют место равенства $\Gamma_0(\omega) = \gamma_0$ и $\varkappa_0(\omega)=x^0$;
-    \item выполняются соотношения \eqref{rekk};
-    \item для любых  $a$, $b$, $x^t=(x_{1,t},x_{2,t},x_{3,t},x_{4,t}) \in \mathbb{Z}_+^4$, $\Gamma^{(k_t,r_t)} \in \Gamma$, $t = 1, 2, \ldots$, условное распределение векторов $\eta_i$, и $\xi_i$ имеет вид 
-\begin{multline*}
-    {\mathbf P}(\{ \omega \colon \eta_i = a, \xi_i=b\} |\cap_{t=0}^{i}\{\omega\colon \Gamma_t=\Gamma{(k_t,r_t)}, \varkappa_t=x^t\})=\\
-=\varphi(a,k_i,r_i,x^i)\times \zeta(b,k_i,r_i,x^i).
-\end{multline*}
-    \end{itemize}
-}
-\framebreak
-
 \begin{block}
-    {\bf Теорема 2.} {\it 
-Пусть $\Gamma_0=\Gamma^{(k,r)}\in \Gamma$ и $(\varkappa_{1,0},\varkappa_{2,0},\varkappa_{3,0},\varkappa_{4,0})=(x_1,x_2,x_3,x_4)\in \mathbb{Z}_+^4$ фиксированы. 
+    {\bf Теорема 1.} {\it 
+    Пусть $$\Gamma_0=\Gamma^{(k_0,r_0)} \in \Gamma,  \varkappa_{3,0}=x_3\in \mathbb{Z}_+$$ фиксированы. 
+    
+    Тогда последовательность $$\{(\Gamma_i, \varkappa_{3,i}); i \geqslant 0\}$$ является счетной цепью Маркова.}
+\end{block}
+\begin{block}
+    {\bf Теорема 2.}{\it Пусть 
+    $$x_3, \tilde{x}_3~\in \mathbb{Z}_+, \quad \Gamma^{(k,r)}\in \Gamma, \Gamma^{(\tilde{k},\tilde{r})}= h(\Gamma^{(k,r)},x_3).$$ Тогда условная вероятность 
+$${\mathbf P}(\{\Gamma_{i+1}=\Gamma^{(\tilde{k},\tilde{r})},\varkappa_{3,i+1}=\tilde{x}_3\}|\{\Gamma_{i}=\Gamma^{(k,r)},\varkappa_{3,i}=x_3\})$$ равна
+$$\delta_{\tilde{x}_3,0}\!\sum_{a=0}^{\ell(\tilde{k},\tilde{r},3)-x} \varphi_3(a,h_T(\Gamma^{(k,r)},x_3)) + (1-\delta_{\tilde{x}_3,0}) \varphi_3(\tilde{x}_3 + \ell(\tilde{k},\tilde{r},3)-x_3,h_T(\Gamma^{(k,r)},x_3)).$$}
+\end{block}
 
-Тогда последовательность $\{(\Gamma_i, \varkappa_{1,i},\varkappa_{2,i}, \varkappa_{3,i}, \varkappa_{4,i}); i \geqslant 0\}$ является однородной счетной цепью Маркова.
-}
+\framebreak
+\begin{block}
+    {\bf Теорема 3.}{\it Пусть для $r=\overline{1,n_0}$ определено множество $$S^3_{0,r} =\bigl\{(\Gamma^{(0,r)},x_3)  \colon x_3\in Z_+,  L \geqslant x_3 > L - \max\bigl\{\sum_{t=0}^{n_k} \ell_{k,t,3}\colon k=\overline{1,d}\bigr\}\,\bigr\}
+$$ и  для $k=\overline{1,d}$, $r=\overline{1,n_k}$ обозначено $$S^3_{k,r} =  \{(\Gamma^{(k,r)},x_3) \colon x_3\in Z_+, x_3 > L - \sum_{t=0}^{r-1} \ell_{k,t,3}\}.$$ Тогда множество существенных состояний марковской цепи $\{(\Gamma_i, \varkappa_{3,i}); i \geqslant 0\}$ есть $$S=\bigcup_{k=0}^d \bigl(\bigcup_{r=1}^{n_k} S^3_{k,r}\bigr).$$}
 \end{block}
 \end{frame}
+
+
 
 
 \appendix
 \section{Приложение}
 \backupbegin
 
+
+
 \begin{frame}[allowframebreaks]{Идея построения вероятностного пространства}
 \textbf{1 шаг.} Строится <<начальное>> вероятностное пространство $(\Omega_0, {\cal F}_0, P_0(\cdot))$. 
 \begin{itemize} 
 \item $\omega_0 = (\omega_{1,0}, \omega_{2,0},\omega_{3,0})$, $\omega_{j,0} \in Z_+$. По своему смыслу $\omega_{j,0}$ есть количество требований в очереди $O_j$ в момент времени $\tau_0$.
-\item ${\cal F}_0=2^{\Omega_0}$.
+\item ${\cal F}_0=2^{\Omega_0}$.
 \item $P_0(\{(a_1,a_2,a_3)\})=~\varphi_1(a_1,h_T(\Gamma^{(k_0,r_0)})) \times \psi(a_2,x_{2,0}, p_{\tilde{k},\tilde{r}}) \times \times \varphi_3(a_3,h_T(\Gamma^{(k_0,r_0)}))$.
 \end{itemize}
 
